# pdf-to-pptx-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
pdf_to_pptx_tool/: __init__.py  cli.py  completion.py  converter.py  logging_config.py  utils.py
plugins/pdf-to-pptx-tool/.claude-plugin/: plugin.json
plugins/pdf-to-pptx-tool/commands/: convert.md  help.md
plugins/pdf-to-pptx-tool/skills/pdf-to-pptx-tool/: SKILL.md
references/: architecture.md  marketplace-plugin-guide.md  test-verbosity-levels.sh
tests/: __init__.py  test_utils.py
